2000-01-19  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Remove unused instantiation of
	Ada.Unchecked_Deallocation as well as the dependency on it.
	Export symbols for Physical_Send and Physical_Receive so that they
	can be used in profiling tests (with convention Ada).

	* s-ganeut.ads: Make this package public so that it can be used
	by performance measurements programs.

	* s-garthi.ads: Default address family for Sockaddr_In is AF_INET.

	* constants.sh (constants): Add PF_INET constant.

1999-12-13  Laurent Pautet  <pautet@inf.enst.fr>

	* Makefile.am, Makefile.in: Rebuild because of configure.in
 	changes. Renames generated System.Garlic.TCP.Operations into
 	System.Garlic.TCP_Operations. A clone of System.Garlic.TCP using
 	subprograms from Operations should not depend on
 	System.Garlic.TCP. Save the elaboration order in file
 	"elaboration" for debugging purpose. Adapt Makefile to work for
 	other Make and not only GNUMake.

	* s-ganata.adb, s-ganata.ads: Replace Free by Destroy. Remove
 	elaboration code and add procedure Initialize.

	* s-ganobl.adb, s-ganobl.ads: Add procedures Initialize and
 	Shutdown. Move elaboration code in Initialize. Shutdown ensures a
 	synchronous termination of this unit. When we close a socket, we
 	dequeue all the send and recv operations. This fixes several race
 	conditions. One example was when a file descriptor was closed and
 	then reused in another connection. Receive operations were not
 	resumed by the close operation but were consuming the data from
 	the newly created connection. Update protected types due to
 	changes above. Replace TCP by Tcp.

	* s-gaphlo.adb, s-gaphlo.ads: New procedures Add_Missing_Locations
 	Add_First_Missing_Location and To_Location. Remove protocol
 	registration procedure and shutdown procedure (redundant with
 	System.Garlic.Protocols procedures). Replace Free by Destroy.

	* s-gaplsp.ads.in: Split Default_Boot_Server into a
 	Default_Protocol_Name and a Default_Protocol_Data.
