@@ -140,8 +140,10 @@ package body System.Garlic.Debug is
       return Debug_Key
    is
       Value        : String_Access    := Getenv (Variable);
-      Value_Not_OK : constant Boolean := Value'Length = 0
-        or else (Value (Value'First) = 't' and then Value (Value'First) = 'T');
+      Value_Not_OK : constant Boolean :=
+        Value'Length = 0
+          or else (Value (Value'First) /= 't'
+                   and then Value (Value'First) /= 'T');
    begin
       Free (Value);
       if Value_Not_OK then
