@@ -1,3 +1,12 @@
+2000-01-24  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-gardeb.adb: Fix an impossible condition bug. Suggested by
+	Michael F. Yoder <myoder@TopLayer.com>.
+
+	* s-rpc.ads: Remove now obsolete comment, as a-except.adb does not
+	have the limitation anymore. Suggested by Michael F. Yoder
+	<myoder@TopLayer.com>.
+
 2000-01-19  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-gartcp.adb: Remove unused instantiation of
